# arc-ingester

./: Cargo.toml  DATA_OBSERVATIONS.md  LICENSE-APACHE  README.md  build.rs
.github/workflows/: build.yml
.sqlx/: query-ac15bfcd1737751e27388ffddfe8ec47fd7277be74c47a59484e4fc993671d43.json  query-f0402ce4a5c93837f39559bfb3358a7655f178080465f7abd7f7702d42474157.json
functions/: update_places.sql  update_timeline_items.sql
migrations/: 20240207205957_init.sql  20240310183925_add_last_saved_timestamps.sql
src/: main.rs  t1.rs
