[package]
name = "arc-ingester"
version = "0.1.1"
edition = "2021"
authors = ["Joshua Coles"]
license = "MIT OR Apache-2.0"
default-run = "arc-ingester"

[[bin]]
name = "arc-ingester"
path = "src/main.rs"

[[bin]]
name = "t1"
path = "src/t1.rs"

[dependencies]
clap = { version = "4.4.18", features = ["derive", "env"] }
sqlx = { version = "0.7.3", features = ["json", "runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
flate2 = "1"
thiserror = "1"
sha256 = "1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
rayon = "1.8.1"
futures = "0.3.30"
itertools = "0.12.1"
chrono = { version = "0.4.33", features = ["serde"] }
uuid = { version = "1.7.0", features = ["serde"] }
testcontainers = "0.15.0"
testcontainers-modules = { version = "0.3.6", features = ["postgres"] }
anyhow = { version = "1.0.82", features = ["backtrace"] }
